[tool.poetry]
name = "fancyimpute"
version = "0.1.0"
description = ""
authors = ["antoninak <antonina.krajewska@nask.pl>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
knnimpute = "^0.1.0"
scikit-learn = "^0.24.2"
keras = "^2.6.0"
cvxopt = "^1.2.6"
tensorflow = "2.5.0"
cvxpy = "^1.1.15"
dask = "^2021.8.1"
sparse = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
